Overridden Actionbar back button
All action bar back buttons now behave like hardware back button

--- a/AnimeOp&EdQuiz2/res/layout/music_play.xml
+++ b/AnimeOp&EdQuiz2/res/layout/music_play.xml
@@ -11,7 +11,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="52dp"
-        android:background="@drawable/music_playbutton"
+        android:background="@null"
+        android:src="@drawable/music_playbutton"
         android:contentDescription="@string/contentDescriptionMusicPlay" />
 
     <SeekBar
