--- a/AnimeOp&EdQuiz2/res/layout/levels.xml
+++ b/AnimeOp&EdQuiz2/res/layout/levels.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical" >
 
         <ImageButton
-            android:id="@+id/level1"
+            android:id="@+id/level_1"
             android:layout_width="271dp"
             android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
@@ -22,43 +22,43 @@
             android:onClick="handleImageButton" />
 
         <ImageButton
-            android:id="@+id/level2"
+            android:id="@+id/level_2"
             android:layout_width="271dp"
             android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:background="@drawable/level2button"
-            android:contentDescription="@string/contentDescriptionLevel1"
+            android:contentDescription="@string/contentDescriptionLevel2"
             android:onClick="handleImageButton" />
 
         <ImageButton
-            android:id="@+id/level3"
+            android:id="@+id/level_3"
             android:layout_width="271dp"
             android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:background="@drawable/level3button"
-            android:contentDescription="@string/contentDescriptionLevel1"
+            android:contentDescription="@string/contentDescriptionLevel3"
             android:onClick="handleImageButton" />
 
         <ImageButton
-            android:id="@+id/level4"
+            android:id="@+id/level_4"
             android:layout_width="271dp"
             android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:background="@drawable/level4button"
-            android:contentDescription="@string/contentDescriptionLevel1"
+            android:contentDescription="@string/contentDescriptionLevel4"
             android:onClick="handleImageButton" />
 
         <ImageButton
-            android:id="@+id/level5"
+            android:id="@+id/level_5"
             android:layout_width="271dp"
             android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:background="@drawable/level5button"
-            android:contentDescription="@string/contentDescriptionLevel1"
+            android:contentDescription="@string/contentDescriptionLevel4"
             android:onClick="handleImageButton" />
 
         <ImageButton
@@ -68,7 +68,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:background="@drawable/level2"
-            android:contentDescription="@string/contentDescriptionLevel1"
+            android:contentDescription="@string/contentDescriptionLevel2"
             android:onClick="handleImageButton" />
 
         <ImageButton
