--- a/AnimeOp&EdQuiz2/res/layout/music_selection.xml
+++ b/AnimeOp&EdQuiz2/res/layout/music_selection.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+     android:background="@color/DimGray" >
 
     <GridView
         android:id="@+id/gridView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="0dp"
+        android:stretchMode="columnWidth"
+       
         android:numColumns="3" 
         android:gravity="center_horizontal">
         
@@ -17,4 +22,4 @@
         
     </GridView>
 
-</LinearLayout>
+</FrameLayout>
