--- a/AnimeOp&EdQuiz2/res/layout/music_play.xml
+++ b/AnimeOp&EdQuiz2/res/layout/music_play.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+     >
 
     <SeekBar
         android:id="@+id/musicSeekBar"
@@ -13,7 +14,7 @@
 
     <ImageButton
         android:id="@+id/musicPlayButton"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/musicSeekBar"
         android:layout_centerHorizontal="true"
@@ -21,44 +22,60 @@
         android:contentDescription="@string/contentDescriptionMusicPlay"
         android:src="@drawable/music_playbutton" />
 
-    <Button
-        android:id="@+id/question1_Button"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/musicPlayButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:onClick="questionButtonTapped"
-        android:padding="10dp" />
+  <ScrollView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/musicPlayButton"
+      android:layout_centerHorizontal="true" >
 
-    <Button
-        android:id="@+id/question2_Button"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/question1_Button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:onClick="questionButtonTapped"
-        android:padding="10dp" />
+      <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" >
 
-    <Button
-        android:id="@+id/question3_Button"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/question2_Button"
-        android:layout_below="@+id/question2_Button"
-        android:layout_marginTop="20dp"
-        android:onClick="questionButtonTapped"
-        android:padding="10dp" />
+          <Button
+              android:id="@+id/question1_Button"
+              android:layout_width="280dp"
+              android:layout_height="wrap_content"
+              android:layout_centerHorizontal="true"
+              android:layout_marginTop="15dp"
+              
+              android:onClick="questionButtonTapped"
+              android:background="@drawable/btn_answers"
+              android:padding="10dp" />
 
-    <Button
-        android:id="@+id/question4_Button"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/question3_Button"
-        android:layout_below="@+id/question3_Button"
-        android:layout_marginTop="20dp"
-        android:onClick="questionButtonTapped"
-        android:padding="10dp" />
+          <Button
+              android:id="@+id/question2_Button"
+              android:layout_width="280dp"
+              android:layout_height="wrap_content"
+              android:layout_below="@+id/question1_Button"
+              android:layout_centerHorizontal="true"
+              android:layout_marginTop="10dp"
+               android:background="@drawable/btn_answers"
+              android:onClick="questionButtonTapped"
+              android:padding="10dp" />
+
+          <Button
+              android:id="@+id/question3_Button"
+              android:layout_width="280dp"
+              android:layout_height="wrap_content"
+              android:layout_alignLeft="@+id/question2_Button"
+              android:layout_below="@+id/question2_Button"
+              android:layout_marginTop="10dp"
+               android:background="@drawable/btn_answers"
+              android:onClick="questionButtonTapped"
+              android:padding="10dp" />
+
+          <Button
+              android:id="@+id/question4_Button"
+              android:layout_width="280dp"
+              android:layout_height="wrap_content"
+              android:layout_alignLeft="@+id/question3_Button"
+              android:layout_below="@+id/question3_Button"
+              android:layout_marginTop="10dp"
+               android:background="@drawable/btn_answers"
+              android:onClick="questionButtonTapped"
+              android:padding="10dp" />
+      </RelativeLayout>
+  </ScrollView>
 
 </RelativeLayout>
