--- a/AnimeOp&EdQuiz2/res/values/color.xml
+++ b/AnimeOp&EdQuiz2/res/values/color.xml
@@ -140,4 +140,6 @@
  <color name="DarkBlue">#00008B</color>
  <color name="Navy">#000080</color>
  <color name="Black">#000000</color>
+ <color name="darkcolorbg">#DEDEDE</color>
+ <color name="darkcolorbg2">#fffefe</color>
 </resources>
