--- a/AnimeOp&EdQuiz2/res/layout/activity_main.xml
+++ b/AnimeOp&EdQuiz2/res/layout/activity_main.xml
@@ -10,16 +10,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    
-
     <Button
         android:id="@+id/playbutton"
-        android:layout_width="120dp"
-        android:layout_height="90dp"
+        android:layout_width="160dp"
+        android:layout_height="95dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/level2button" 
-      	android:scaleType="fitXY"
+        android:layout_marginTop="95dp"
+        android:background="@drawable/level2button"
+        android:scaleType="fitXY"
         android:text="@string/play" />
+
+    <Button
+        android:id="@+id/settings_btn"
+        android:layout_width="160dp"
+        android:layout_height="95dp"
+        android:layout_alignLeft="@+id/playbutton"
+        android:layout_below="@+id/playbutton"
+        android:background="@drawable/level2button"
+        android:scaleType="fitXY"
+        android:text="@string/settingsActivity" />
 
 </RelativeLayout>
