level page: progress bar and rank
adding rank on level page
and progress bar

--- a/AnimeOp&EdQuiz2/res/menu/main.xml
+++ b/AnimeOp&EdQuiz2/res/menu/main.xml
@@ -1,8 +1,8 @@
-
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_userGrade"
-          android:title="@string/userGradetext"
-          
-          />
-  
+          android:icon="@drawable/rank_s"
+       	 android:title="@string/userGradetext"
+          android:showAsAction="always"/>
+ 
 </menu>
