--- a/AnimeOp&EdQuiz2/res/layout/levels.xml
+++ b/AnimeOp&EdQuiz2/res/layout/levels.xml
@@ -7,96 +7,280 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+         >
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+      
+            android:layout_margin="20dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/lightgray"
+              >
+     
         <Button
             android:id="@+id/level_1"
             android:layout_width="320dp"
             android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="13dp"
             android:background="@drawable/level1button"
             android:contentDescription="@string/contentDescriptionLevel1"
             android:onClick="handleButton"
-            android:scaleType="fitXY" />
+          />
+          
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            style="@style/CustomProgressBarHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/level_1"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/level_1"
+            android:layout_below="@+id/level_1"
+            android:progress="50"
+            
+           />
+
+        <ImageView
+            android:id="@+id/rankView1"
+            android:layout_width="57dp"
+            android:layout_height="57dp"
+            android:layout_below="@+id/level_1"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="10dp"
+            android:contentDescription="@string/userRank"
+            android:src="@drawable/rank_s" />
+        
+		</RelativeLayout>
+	
+        <RelativeLayout
+            android:layout_width="wrap_content"
+      
+            android:layout_margin="20dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/lightgray" >
 
         <Button
             android:id="@+id/level_2"
             android:layout_width="320dp"
             android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="13dp"
             android:background="@drawable/level2button"
             android:contentDescription="@string/contentDescriptionLevel2"
             android:onClick="handleButton"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+	/>
+                    
+           <ProgressBar
+            android:id="@+id/progressBar2"
+            style="@style/CustomProgressBarHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/level_2"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/level_2"
+            android:layout_below="@+id/level_2"
+            android:progress="50"></ProgressBar>
+
+        <ImageView
+            android:id="@+id/rankView2"
+            android:layout_width="57dp"
+            android:layout_height="57dp"
+            android:layout_below="@+id/level_2"
+            android:layout_centerHorizontal="true"
+            android:contentDescription="@string/userRank"
+            android:layout_margin="10dp"
+            android:src="@drawable/rank_s" /> 
+            
+            
+            
+           
+	</RelativeLayout>
+
+        <RelativeLayout
+          android:layout_width="wrap_content"
+      
+            android:layout_margin="20dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/lightgray" >
 
         <Button
             android:id="@+id/level_3"
             android:layout_width="320dp"
             android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="13dp"
             android:background="@drawable/level3button"
             android:contentDescription="@string/contentDescriptionLevel3"
             android:onClick="handleButton"
             android:scaleType="fitXY" />
+        
+        
+          <ProgressBar
+            android:id="@+id/progressBar3"
+            style="@style/CustomProgressBarHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/level_3"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/level_3"
+            android:layout_below="@+id/level_3"
+            android:progress="50"></ProgressBar>
 
+        <ImageView
+            android:id="@+id/rankView3"
+            android:layout_width="57dp"
+            android:layout_height="57dp"
+            android:layout_below="@+id/level_3"
+            android:layout_centerHorizontal="true"
+            android:contentDescription="@string/userRank"
+            android:layout_margin="10dp"
+            android:src="@drawable/rank_s" /> 
+            
+	</RelativeLayout>
+
+       <RelativeLayout
+         android:layout_width="wrap_content"
+      
+            android:layout_margin="20dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/lightgray" >
+ 
         <Button
             android:id="@+id/level_4"
             android:layout_width="320dp"
             android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="13dp"
             android:background="@drawable/level4button"
             android:contentDescription="@string/contentDescriptionLevel4"
             android:onClick="handleButton"
             android:scaleType="fitXY" />
+        
+          <ProgressBar
+            android:id="@+id/progressBar4"
+            style="@style/CustomProgressBarHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/level_4"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/level_4"
+            android:layout_below="@+id/level_4"
+            android:progress="50"></ProgressBar>
+
+        <ImageView
+            android:id="@+id/rankView4"
+            android:layout_width="57dp"
+            android:layout_height="57dp"
+            android:layout_below="@+id/level_4"
+            android:layout_centerHorizontal="true"
+            android:contentDescription="@string/userRank"
+            android:layout_margin="10dp"
+            android:src="@drawable/rank_s" /> 
+            
+</RelativeLayout>
+
+       <RelativeLayout
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center_horizontal"
+           android:layout_margin="20dp"
+           android:background="@color/lightgray" >
 
         <Button
             android:id="@+id/level_5"
             android:layout_width="320dp"
             android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="13dp"
             android:background="@drawable/level5button"
             android:contentDescription="@string/contentDescriptionLevel4"
             android:onClick="handleButton"
             android:scaleType="fitXY" />
+        
+          <ProgressBar
+            android:id="@+id/progressBar5"
+            style="@style/CustomProgressBarHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/level_5"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/level_5"
+            android:layout_below="@+id/level_5"
+            android:progress="50"></ProgressBar>
+
+        <ImageView
+            android:id="@+id/rankView5"
+            android:layout_width="57dp"
+            android:layout_height="57dp"
+            android:layout_below="@+id/level_5"
+            android:layout_centerHorizontal="true"
+            android:contentDescription="@string/userRank"
+            android:layout_margin="10dp"
+            android:src="@drawable/rank_s" /> 
+            
+</RelativeLayout>
+
+       <RelativeLayout
+           android:layout_width="wrap_content"
+      
+            android:layout_margin="20dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/lightgray" >
 
         <Button
             android:id="@+id/level_6"
             android:layout_width="320dp"
             android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="13dp"
             android:background="@drawable/level1button"
             android:contentDescription="@string/contentDescriptionLevel2"
             android:onClick="handleButton"
             android:scaleType="fitXY" />
+        
+        </RelativeLayout>
+        
+<RelativeLayout
+     android:layout_width="wrap_content"
+      
+            android:layout_margin="20dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/lightgray" >
 
         <Button
             android:id="@+id/level_7"
             android:layout_width="320dp"
             android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="13dp"
             android:background="@drawable/level2button"
             android:contentDescription="@string/contentDescriptionLevel1"
             android:onClick="handleButton"
             android:scaleType="fitXY" />
+        
+        
+        </RelativeLayout>
+
+<RelativeLayout
+     android:layout_width="wrap_content"
+      
+            android:layout_margin="20dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/lightgray" >
 
         <Button
             android:id="@+id/level_8"
             android:layout_width="320dp"
             android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="13dp"
             android:background="@drawable/level3button"
             android:contentDescription="@string/contentDescriptionLevel1"
             android:onClick="handleButton"
             android:scaleType="fitXY" />
-
+</RelativeLayout>
     </LinearLayout>
 
 </ScrollView>
