--- a/AnimeOp&EdQuiz2/res/values/color.xml
+++ b/AnimeOp&EdQuiz2/res/values/color.xml
@@ -137,7 +137,7 @@
  <color name="DarkGreen">#006400</color>
  <color name="Blue">#0000FF</color>
  <color name="MediumBlue">#0000CD</color>
- <color name="DarkBlue">#00008B</color>
+ <color name="lightgray">#949292</color>
  <color name="Navy">#000080</color>
  <color name="Black">#000000</color>
  <color name="darkcolorbg">#DEDEDE</color>
