--- a/AnimeOp&EdQuiz2/res/values/styles.xml
+++ b/AnimeOp&EdQuiz2/res/values/styles.xml
@@ -16,5 +16,10 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    <style name="CustomProgressBarHorizontal" parent="android:Widget.Holo.Light.ProgressBar.Horizontal">
+      <item name="android:progressDrawable">@drawable/customprogressbar</item>
+      <item name="android:minHeight">10dip</item>
+      <item name="android:maxHeight">20dip</item>
+	</style>
 
 </resources>
